# OptimalPanel

./: .gitignore  README.md  pyproject.toml
notebooks/: Tutorial_Simulation.ipynb
notebooks/applications/conflict/: intensity_forecast.ipynb
notebooks/applications/macroeconomics/: facts.ipynb  gdp_annual.ipynb  gdp_quarterly.ipynb  gdp_quarterly_loop.ipynb  thompson.ipynb
notebooks/archive/: rl_4units.ipynb  rl_nunits.ipynb
notebooks/simulation/: naive_simulation.ipynb  regime_plots.ipynb  regime_simulation.ipynb  test_ar1.ipynb
src/OptimalPanel/: __init__.py  bayesian.py  optimizer.py  summary.py
