[project]
name = "OptimalPanel"
version = "0.1.0"
description = "RL-based tool for optimal panel data forecasting"
authors = [
  { name = "Renato Vassallo", email = "renato.vassallo@bse.eu" }
]
readme = "README.md"

requires-python = ">=3.11,<3.12"

dependencies = [
    "joblib>=1.5.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "torch>=2.7.0",
]

[dependency-groups]
dev = [
    "pyarrow>=20.0.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "tqdm"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
